--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "back": "nodemon server.js"
+    "back": "nodemon server.js",
+    "front":"cd clients && npm start",
+    "dev":"concurrently \"npm run back\" \"npm run front\""
+
   },
   "author": "",
   "license": "ISC",
