--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
-DB_URI=mongodb+srv://karim:20714971abdo@abdelelkarim.vbgoppi.mongodb.net/?retryWrites=true&w=majority
+DB_URI=mongodb+srv://karim:20714971abdo@abdelelkarim.vbgoppi.mongodb.net/app?retryWrites=true&w=majority
+SecretOrKey="secretfgfhgfgyhufugukhjlkiuiui"
