--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "back": "nodemon server.js",
-    "front":"cd clients && npm start",
-    "dev":"concurrently \"npm run back\" \"npm run front\""
-
+    "front": "cd clients && npm start",
+    "dev": "concurrently \"npm run back\" \"npm run front\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
+    "cookies": "^0.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "validator": "^13.7.0"
   }
 }
