--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "concurrently": "^7.4.0",
     "cookie-parser": "^1.4.6",
     "cookies": "^0.8.0",
     "cors": "^2.8.5",
