--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "stream": "^0.0.2",
+    "util": "^0.12.4",
     "validator": "^13.7.0"
   }
 }
